test/TestPhases/typechecker/invalid/NoMagicCasting6.blc
module

function noMagicCasting ()
    var a: float32 = -128

    var c: int64 = a
end
